completing merge with EJY changes

--- a/writing/cogsci2018/cogsci2018.tex
+++ b/writing/cogsci2018/cogsci2018.tex
@@ -577,8 +577,7 @@ EJY and an NSF GRFP to KM.
 
 \section{References}\label{references}
 
-\setstretch{1.5} \setlength{\parindent}{-0.1in}
-\setlength{\leftskip}{0.125in}
+\setlength{\parindent}{-0.1in} \setlength{\leftskip}{0.125in}
 
 \noindent
 
