changes based on mcf and hg feedback

--- a/writing/cogsci2018/library.bib
+++ b/writing/cogsci2018/library.bib
@@ -26,6 +26,28 @@
   publisher={Elsevier}
 }
 
+@article{frank2013throwing,
+  title={Throwing out the Bayesian baby with the optimal bathwater: Response to Endress (2013)},
+  author={Frank, Michael C},
+  journal={Cognition},
+  volume={128},
+  number={3},
+  pages={417--423},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{goodman2015relevant,
+  title={Relevant and robust: A response to Marcus and Davis (2013)},
+  author={Goodman, Noah D and Frank, Michael C and Griffiths, Thomas L and Tenenbaum, Joshua B and Battaglia, Peter W and Hamrick, Jessica B},
+  journal={Psychological science},
+  volume={26},
+  number={4},
+  pages={539--541},
+  year={2015},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
 @article{xu2007,
   title={Word learning as Bayesian inference.},
   author={Xu, Fei and Tenenbaum, Joshua B},
