--- a/writing/cogsci2018/cogsci2018.tex
+++ b/writing/cogsci2018/cogsci2018.tex
@@ -59,21 +59,21 @@
 \maketitle
 
 \begin{abstract}
-Our actions shape what we learn. Recent work suggests that people engage
-in efficient self-directed learning to maximize information gain.
-However, human learning often unfolds in social contexts where learners
-not only face informational goals (e.g., learn how something works) but
-also social goals (e.g., appear competent and impress others). How do
-these factors shape learners' decisions? Here, we present a
-computational model that integrates the value of social and information
-goals to predict the decisions that people will make in a simple active
-causal learning task. We show that an emphasis on performance or
-self-presentation goals leads to reduced chances of learning (E1) and
-that social context can push learners to pursue performance-oriented
-actions even when the learning goal is highlighted (E2). Our formal
-model of social-active learning successfully captures the empirical
-results. These findings are the first steps towards understanding the
-role of social reasoning in active learning contexts.
+Our actions shape what we learn. Because of this dependency, learners
+are proficient at choosing their actions to maximize their information
+gain. But learning often unfolds in social contexts where learners have
+both informational goals (e.g., to learn how something works) but also
+social goals (e.g., to appear competent and impress others). How do
+these different factors shape learners' decisions? Here, we present a
+computational model that integrates the value of social and
+informational goals to predict the decisions that people will make in a
+simple active causal learning task. We show that an emphasis on
+performance or self-presentation goals leads to reduced chances of
+learning (Exp.1) and that social context can push learners to pursue
+performance-oriented actions even when the learning goal is highlighted
+(Exp.2). Our formal model of social-active learning successfully
+captures the empirical results. These findings are first steps towards
+understanding the role of social reasoning in active learning contexts.
 
 \textbf{Keywords:}
 active learning; social reasoning; information gain; OED;
@@ -86,40 +86,39 @@ Imagine you are a novice cook and you have to decide what meal to
 prepare for a first date. Should you choose an easy favorite or should
 you attempt to make something new? While the familiar recipe can ensure
 a good meal, you may miss out on a new, delicious dish. The new recipe
-might taste even better, but it has a higher chance of failure. In such
-\emph{explore-exploit} dilemma (Sutton \& Barto, 1998), you can choose
-between \emph{exploring} the new recipe that may or may not result in a
-more delicious dish (\emph{learning} goal), or \emph{exploiting} your
-previous experience and knowledge to ensure a good meal
-(\emph{performance} goal). Here, we explore the idea of formalizing the
-learning-performance goal tradeoff using a simple active learning
-context, where social factors may shape the goals we consider.
+might taste even better, but it has a higher chance of failure. In this
+type of \emph{explore-exploit} dilemma (Sutton \& Barto, 1998), you can
+choose between \emph{exploring} the new recipe that may or may not
+result in a more delicious dish (\emph{learning} goal), or
+\emph{exploiting} your previous experience and knowledge to ensure a
+good meal (\emph{performance} goal). Here, we explore the idea of
+formalizing the learning-performance goal tradeoff using a simple active
+learning context, where social factors may shape the goals we consider.
 
 Active learning occurs when people have control over the sequence of
 information in a learning context (e.g., try pressing buttons on a toy,
-one by one, to see their effect). The key assumption is learners will
-maximize the usefulness of their actions by gathering information that
-is especially helpful for their own learning. Active contexts lead to
-faster learning than passive contexts where people don't have control
-over the information flow, as suggested by empirical work in education
-(Grabinger \& Dunlap, 1995), machine learning (Settles, 2012), and
-cognitive psychology (Castro et al., 2009).
+one by one, to see their effect). The key assumption is that learners
+will maximize the utility of their actions by gathering information that
+is especially helpful for their own learning. Empirical work in
+education (Grabinger \& Dunlap, 1995), machine learning (Settles, 2012),
+and cognitive psychology (Castro et al., 2009) suggests that active
+contexts lead to faster learning than passive contexts where people
+don't have control over the information flow.
 
 But real-world learning usually takes place in rich social contexts with
 teachers, peers, or other people who can directly influence our
-learning. Indeed, children and adults seem to modulate their inferences
-depending on whether evidence is generated on their own or by others
-(e.g., Xu \& Tenenbaum, 2007); whether they observe intentional versus
-accidental actions (Carpenter, Akhtar, \& Tomasello, 1998); and whether
-they believe another person selected their actions with the goal of
-helping them learn (i.e., teaching; Shafto, Goodman, \& Frank, 2012).
-But even when we learn from \emph{our} own actions instead of others',
-our social environment may affect our self-directed learning process.
-While previous models have captured how we optimize learning, either
-from our own actions or from others, they have been agnostic to other
-social factors that are ubiquitous in a learner's environment. People
-must integrate the value of social goals (e.g., looking competent or
-knowledgeable) and information goals when deciding what to do next.
+learning. Indeed, adults and even preschool-aged children modulate their
+inferences depending on how others (e.g., teachers) select their actions
+(Shafto, Goodman, \& Frank, 2012), and understand that socially
+communicated information licenses different inferences than information
+generated on their own (e.g., Xu \& Tenenbaum, 2007). But even when we
+learn from \emph{our} own actions instead of others', our social
+environment may affect our self-directed learning process. While
+previous models have captured how we optimize learning, either from our
+own actions or from others, they have been agnostic to other social
+factors that are ubiquitous in a learner's environment. People must
+integrate the value of social goals (e.g., looking competent or
+knowledgeable) and informational goals when deciding what to do next.
 
 How can active learning models accommodate this richer set of utilities?
 As a step towards answering this question, we model a learner who
@@ -127,10 +126,13 @@ considers a mixture of learning and performance goals. A key assumption
 underlying recent Bayesian models of human social cognition is that
 people expect others to act approximately optimally given a utility
 function (e.g., Goodman \& Frank, 2016; Jara-Ettinger, Gweon, Schulz, \&
-Tenenbaum, 2016). Our model adopts the same utility-theoretic approach,
-and assumes an agent who reasons about the utility function that
-represents a weighted combination of multiple goals (Yoon, Tessler,
-Goodman, \& Frank, 2017) in a social active learning context.
+Tenenbaum, 2016). Our model adopts this utility-theoretic approach, and
+assumes an agent who reasons about the utility function that represents
+a weighted combination of multiple goals (Yoon, Tessler, Goodman, \&
+Frank, 2017) in a social active learning context.\footnote{Such models
+  are commonly used to approximate group-level behavior, without the
+  strong assumption that individuals must be strictly optimal (e.g.,
+  Frank, 2013).}
 
 \begin{CodeChunk}
 \begin{figure}[b]
@@ -150,63 +152,69 @@ Goodman, \& Frank, 2017) in a social active learning context.
 
 }
 
-\caption[Diagram of the computational model]{Diagram of the computational model. The learner considers possible hypotheses: Toy 1 (handle pull turns on the light, button press turns on music, both actions cause both effects); Toy 2 (handle pull turns on music, button press turns on the light, both actions cause both effects); and Toy 3 (both actions cause both effects, but each action on its own does not produce any effect). The learner also considers his goals. When an observer is absent, he considers his learning goal and performance goal and chooses an action. The learning goal favors a single action (e.g., pull the handle only) that can fully disambiguate, whereas the performance goal favors the both action (pull the handle AND push the button) that guarantees the most salient reward. When an observer is present, the learner considers the learning, performance (not shown), and presentational goal.}\label{fig:model_diagram}
+\caption[Model schematic for the learner's inference]{Model schematic for the learner's inference. The learner considers possible hypotheses: Toy 1 (handle pull turns on the light, button press turns on music, both actions cause both effects); Toy 2 (handle pull turns on music, button press turns on the light, both actions cause both effects); and Toy 3 (both actions cause both effects, but each action on its own does not produce any effect). The learner also considers his goals. When an observer is absent, he considers his learning goal and performance goal and chooses an action. The learning goal favors a single action (e.g., pull the handle only) that can fully disambiguate, whereas the performance goal favors the both action (pull the handle AND push the button) that guarantees the most salient reward. When an observer is present, the learner considers the learning, performance (not shown), and presentational goal.}\label{fig:model_diagram}
 \end{figure*}
 \end{CodeChunk}
 
 We instantiate our model in a simple causal learning task and examine
 how people choose actions that support learning vs.~performance goals in
-different social contexts. We present a toy with an uncertain causal
-mechanism (Fig \ref{fig:toy}). For this toy, doing only one of the two
+different social contexts. We present a toy with an ambiguous causal
+mechanism (Fig. \ref{fig:toy}). For this toy, doing only one of the two
 possible actions (handle pull or button press) disambiguates its causal
 mechanism but potentially risks no immediate effect (i.e., neither sound
 nor light turning on), while doing both actions at the same time is
 immediately rewarding but is not informative for learning the toy's
 causal mechanism. Thus, the learner can choose between the two actions
-that will each lead to one outcome (new discovery; learning) or the
-other (immediate reward; performance). The learner's action rests on
-relative utilities he assigns to exploration versus exploitation, which
-in turn are determined in part by the social context (e.g., the presence
-or absence of his
+that will each lead to one outcome (new discovery; exploration;
+learning) or the other (immediate reward; exploitation; performance).
+The learner's action rests on relative utilities he assigns to learning
+versus performance, which in turn are determined in part by the social
+context (e.g., the presence or absence of his
 boss).\footnote{From here on, we use a male pronoun for Bob, the learner, and female pronoun for Ann, the boss and observer.}
 
 In two experiments, we show that emphasizing performance or
 self-presentation (social) goals leads to actions that are not
-informative and thus reduce the chances of learning (E1). Next, we show
-that the presence of an observer (i.e., a boss) pushes learners to
-pursue performance/presentation-oriented actions even when the learning
-goal is highlighted (E2). Finally, we show that the empirical results
-are consistent with predictions of our cognitive model of social-active
-learning.
+informative and thus reduces the chances of learning (Exp.1). Next, we
+show that the mere presence of an observer (i.e., a boss) pushes
+learners to consider performance/presentation-oriented actions even when
+the learning goal is highlighted (Exp.2). Finally, we show that the
+empirical results are consistent with predictions of our cognitive model
+of social-active learning.
 
 \section{Computational model}\label{computational-model}
 
 We model a learner \(L\) who chooses his action \(a\) approximately
-optimally (as per optimality \(\lambda\)) based on the expected total
-utility \(U_{t}\) given his action and observer presence.
-\[ P_L(a | o) \propto \exp(\lambda \cdot \mathbb{E}[U_{total}(a,o)])\]
-\[U_{t}(a,o) = \phi_{learn} \cdot U_{learn}(a) + \phi_{perf} \cdot U_{perf}(a) + \delta^o \cdot \phi_{pres} \cdot U_{pres}(a)\]
+optimally (as per optimality parameter \(\lambda\)) based on the
+expected total utility \(U_{t}\) given his action \(a\) and presence of
+an observer \(o\).
+
+\[ P_L(a | o) \propto \exp(\lambda \cdot \mathbb{E}[U_{t}(a,o)])\],
+\noindent
+where the total utility is defined as:
+\[U_{t}(a,o) = \phi_{learn} \cdot U_{learn}(a) + \phi_{perf} \cdot U_{perf}(a) + \delta^o \cdot \phi_{pres} \cdot U_{pres}(a)\],
 \noindent
 where \(\phi\)s are weights that are inferred for each utility from data
-and \(\delta^o\) a dirac function that is 1 if there is an observer, and
-0 if there is no observer. Below we describe each utility structure (see
-Fig \ref{fig:model_diagram} for a visual schematic of the model).
+and \(\delta^o\) is a Dirac delta function that is 1 if there is an
+observer, and 0 if there is no observer. Below we describe each utility
+structure (see Fig. \ref{fig:model_diagram} for a visual schematic of
+the model).
 
 \subsubsection{Learning utility}\label{learning-utility}
 
-The \emph{learning utility} symbolizes the goal to learn new
-information, which in our paradigm is associated with figuring out how a
-given toy works. The learning utility is formally represented by an OED
-model (Lindley, 1956; ``Optimal Experiment Design''; Nelson, 2005),
-which quantifies the expected utility of different information seeking
-actions. The learner considers the hypothesis space \(H\), and wants to
-determine the correct hypothesis. He thinks about the utility of the
-outcome \(m\) to each possible action, which is equal to the
+The \emph{learning utility} captures the goal to learn new information,
+which in our paradigm is associated with figuring out how a given toy
+works. The learning utility is formally represented by an OED model
+(Lindley, 1956; ``Optimal Experiment Design''; Nelson, 2005), which
+quantifies the expected utility of different information seeking
+actions. The learner considers the hypothesis space \(H(t)\), and wants
+to determine the correct hypothesis for the toy's causal mechanism. He
+thinks about the utility of the outcome \(m\) (e.g., music playing) to
+each possible action (e.g., button press), which is equal to the
 \emph{information gain}: the change in the learner's overall uncertainty
 (difference in entropy) before and after seeing the outcome. This
 information gain is equal to the learning utility (\(U_{learn}\)), which
 is the expected utility of each action:
-\[ U_{learn}(a) = \sum_{\{m, \neg m\}}{P(m|a)}[{ent(H) - ent(H|m,a)}]\]
+\[ U_{learn}(a) \propto \sum_{\{m, \neg m\}}{P(m|a)}[{ent(H(t)) - ent(H(t)|m,a)}]\].
 \noindent
 where \(ent(H)\) is the Shannon entropy of \(H\), which provides a
 measure of the overall amount of uncertainty in the learner's beliefs
@@ -214,7 +222,7 @@ about the candidate hypothesis (MacKay, 2003). Once the learner chooses
 an action \(a\), which yields an effect \(m\) (or no effect \(\neg m\)),
 then he updates his beliefs about each hypothesis via standard Bayesian
 updating. Finally, we scale the utility by \(log_2n\), where \(n\) is
-the number of possible actions, to convert the entropy to a value
+the number of possible actions, to convert the utility to a value
 between 0 and 1.
 
 \subsubsection{Performance utility}\label{performance-utility}
@@ -223,8 +231,8 @@ The \emph{performance utility} is the utility of achieving an immediate
 rewarding outcome. Within our paradigm, the learner gains utility from
 an immediate effect of music or light turning on. The expected
 performance utility (\(U_{perf}\)) before the learner chooses an action
-is the likelihood of an effect \(m\) given the action \(a\).
-\[ U_{perf} = P_L(m | a) \] \noindent
+is the likelihood of an effect \(m\) given the action \(a\):
+\[ U_{perf} = P_L(m | a) \]. \noindent
 
 \subsubsection{Presentation utility}\label{presentation-utility}
 
@@ -233,18 +241,21 @@ the observer \(O\) is expected to reason about the learner \(L\)'s
 competence, equal to whether the learner was able to make the toy
 produce an effect. The learner thinks about the observer's inferential
 process, and the expected \emph{presentational} utility (\(U_{pres}\))
-is based on maximizing the apparent competence inferred by the observer.
-\[ U_{pres} = P_O(m | a)\] \noindent
+is based on maximizing the apparent competence inferred by the observer:
+\[ U_{pres} = P_O(m | a)\]. \noindent
 where \(P_O(m | a)\) is the observer's own estimate of the likelihood of
-an effect given the learner's action.
+an effect given the learner's action.\footnote{We assume that the
+  observer is naive about the toy's causal structure; otherwise, if the
+  observer is knowledgeable, \(U_{perf}\) and \(U_{pres}\) will diverge,
+  which is an important consideration for future work.}
 
 \section{Experiment 1}\label{experiment-1}
 
-In Experiment 1 (E1), we first wanted to confirm that participants would
-choose different actions depending on what goal was highlighted. We were
-also interested in how people would act when no explicit goal was
-specified within the task. Participants were asked to act on a toy with
-an uncertain causal mechanism, and were assigned to different goal
+In Experiment 1 (Exp.1), we first wanted to confirm that participants
+would choose different actions depending on what goal was highlighted.
+We were also interested in how people would act when no explicit goal
+was specified within the task. Participants were asked to act on a toy
+with an uncertain causal mechanism, and were assigned to different goal
 conditions: (1) learning (learn how the toy works), (2) performance
 (make the toy play music), (3) presentation (impress their boss), and
 (4) no goal specified. We hypothesized that participants would choose an
@@ -259,7 +270,7 @@ presentation.\footnote{Our hypothesis, method, model and data analysis were pre-
 
 }
 
-\caption[Behavioral results for E1]{Behavioral results for E1. A: Proportion of action decisions for each goal condition. Error bars represent 95\% binomial CIs computed using a Bayesian beta-binomial model. B: Participants' response times on the action decisions. Each point represents a participant with the width of the violin representing the density of the data at that value. C: Participants' belief change (entropy in bits) as a function of condition. Lower values represent higher certainty after selecting an action.}\label{fig:e1_behav_results_plot}
+\caption[Behavioral results for Exp.1]{Behavioral results for Exp.1. A: Proportion of action decisions for each goal condition. Error bars represent 95\% binomial CIs computed using a Bayesian beta-binomial model. B: Participants' response times on the action decisions. Each point represents a participant with the width of the violin representing the density of the data at that value. C: Participants' belief change (entropy in bits) as a function of condition. Lower values represent higher certainty after selecting an action.}\label{fig:e1_behav_results_plot}
 \end{figure*}
 \end{CodeChunk}
 
@@ -277,7 +288,7 @@ section for details on the manipulation check), and thus the remaining
 \subsubsection{Stimuli and Design}\label{stimuli-and-design}
 
 We presented images and instructions for three different toys that
-looked very similar but worked in different ways (see captions for Fig
+looked very similar but worked in different ways (see captions for Fig.
 \ref{fig:model_diagram}). The instructions conveyed that pressing the
 button and pulling the handle was immediately rewarding but
 uninformative (fails to disambiguate the causal mechanism). In contrast,
@@ -330,10 +341,10 @@ action and observing its effect.
 We modeled action decisions using a logistic regression
 \texttt{$action \sim goal\_condition$} with the No-goal condition as the
 reference
-category.\footnote{In all of the analyses for E1 and E2, we used the {\fontfamily{qcr}\selectfont rstanarm} package to fit Bayesian regression models estimating the differences across conditions. We report the uncertainty in our point estimates using 95\% Highest Density Intervals (HDI). The HDI provides a range of credible values given the data and model.}
+category.\footnote{In all of the analyses for Exp.1 and Exp.2, we used the {\fontfamily{qcr}\selectfont rstanarm} package to fit Bayesian regression models estimating the differences across conditions. We report the uncertainty in our point estimates using 95\% Highest Density Intervals (HDI). The HDI provides a range of credible values given the data and model.}
 Participants' tendency to select a ``single'' action varied across
-conditions as predicted (Fig \ref{fig:e1_behav_results_plot}A), with the
-highest proportion in the Learning condition, followed by No-goal,
+conditions as predicted (Fig. \ref{fig:e1_behav_results_plot}A), with
+the highest proportion in the Learning condition, followed by No-goal,
 Performance, and Presentation.
 
 Compared to the No-goal condition, participants selected the single
@@ -349,8 +360,8 @@ with the 95\% HDI including the null.
 We analyzed decision times, which were the latency to make an action
 selection as measured from the start of the action decision trial (all
 RTs were analyzed in log space), using the same model specification as
-action decisions. Fig \ref{fig:e1_behav_results_plot}A shows the full RT
-data distribution. Compared to the No-Goal condition (\(M\)= 31
+action decisions. Fig. \ref{fig:e1_behav_results_plot}A shows the full
+RT data distribution. Compared to the No-Goal condition (\(M\)= 31
 seconds), participants took on on average 12.2 (4.2, 20) seconds longer
 to generate a decision in the Learning condition. In contrast,
 participants in the Performance and Presentation conditions produced
@@ -362,7 +373,7 @@ We quantified participants' beliefs about the toy using entropy, and
 belief change was measured as the difference in entropy before and after
 selecting an action. We modeled change in entropy as a function of goal
 condition and participants' action choices:
-\texttt{$entropy\_change \sim goal\_condition + action\_response$} (Fig
+\texttt{$entropy\_change \sim goal\_condition + action\_response$} (Fig.
 \ref{fig:e1_behav_results_plot}C). Across all conditions, people who
 selected the single action showed a greater reduction in entropy
 (\(\beta\) = -0.49, {[}-0.64, -0.33{]}, i.e., learned more from their
@@ -378,15 +389,15 @@ this scenario.
 
 }
 
-\caption[Behavioral and model fitting results for E2]{Behavioral and model fitting results for E2. A: Action decisions with color representing social context, from human data (top) and fitted model predictions (bottom). B: Decision times. C: Belief change. D: Inferred phi values for each goal-context condition. All other plotting conventions are the same as Fig 3.}\label{fig:e2_results}
+\caption[Behavioral and model fitting results for Exp.2]{Behavioral and model fitting results for Exp.2. A: Action decisions with color representing social context, from human data (top) and fitted model predictions (bottom). B: Decision times. C: Belief change. D: Inferred phi values for each goal-context condition. All other plotting conventions are the same as Fig. 3.}\label{fig:e2_results}
 \end{figure*}
 \end{CodeChunk}
 
 \section{Experiment 2}\label{experiment-2}
 
-In E1, we confirmed that participants selected different actions
-depending on the type of goal emphasized. In E2, our goals were
-three-fold: (1) to replicate the results from E1; (2) to manipulate
+In Exp.1, we confirmed that participants selected different actions
+depending on the type of goal emphasized. In Exp.2, our goals were
+three-fold: (1) to replicate the results from Exp.1; (2) to manipulate
 goals \emph{and} the presence/absence of another person
 (social/no-social) independently, allowing us to measure the interaction
 between goals and social context; and (3) to compare empirical data with
@@ -401,17 +412,17 @@ Performance condition.
 
 \subsubsection{Participants}\label{participants-1}
 
-Using the same recruitment and exclusion criteria as E1, we recruited
+Using the same recruitment and exclusion criteria as Exp.1, we recruited
 347 participants (42-51 per condition), and 325 participants were
 included in our final analysis.
 
 \subsubsection{Stimuli and Design}\label{stimuli-and-design-1}
 
-The stimuli and design were identical to E1, except we had 7 different
-goal \(\times\) social conditions. Goals were identical to E1; social
-context varied depending on whether the boss was present (\emph{social})
-or absent (\emph{no-social}) in the story. The conditions were:
-\emph{Social-learning}, \emph{Social-performance},
+The stimuli and design were identical to Exp.1, except we had 7
+different goal \(\times\) social conditions. Goals were identical to
+Exp.1; social context varied depending on whether the boss was present
+(\emph{social}) or absent (\emph{no-social}) in the story. The
+conditions were: \emph{Social-learning}, \emph{Social-performance},
 \emph{Social-presentation}, \emph{No-social-no-goal},
 \emph{No-social-learning}, \emph{No-social-performance}, and
 \emph{Social-no-goal}. Note that we did not have
@@ -420,7 +431,7 @@ was defined by presenting oneself as competent to another person.
 
 \subsubsection{Procedure}\label{procedure-1}
 
-The procedure was identical to E1.
+The procedure was identical to Exp.1.
 
 \subsection{Results and discussion}\label{results-and-discussion-1}
 
@@ -429,9 +440,9 @@ The procedure was identical to E1.
 We modeled action decisions using a logistic regression specified as
 \texttt{$action \sim goal\_condition * social\_context$} with the
 no-goal-no-social condition as the reference category. We replicated the
-key finding from E1: participants selected a ``single'' action more
+key finding from Exp.1: participants selected a ``single'' action more
 often when they were in a context that emphasized a learning goal,
-followed by the no-goal, performance, and presentation conditions (Fig
+followed by the no-goal, performance, and presentation conditions (Fig.
 \ref{fig:e2_results}A). There was a main effect of social context, with
 participants being less likely to select the single action when their
 boss was present (\(\beta =\) -0.521, {[}-1.005, -0.053{]}). Finally,
@@ -442,18 +453,18 @@ Learning and No-Goal conditions, but not in the Performance condition
 
 \subsubsection{Action decision times:}\label{action-decision-times-1}
 
-We replicated the key decision time finding from E1, with participants
-making slower decisions in the Learning context as compared to
-Performance/Presentation. On average, participants took seconds to
+We replicated the key decision time finding from Exp.1, with
+participants making slower decisions in the Learning context as compared
+to Performance/Presentation. On average, participants took seconds to
 generate a response in the No-goal condidition and seconds in the
 Learning condition. In contrast, decisions were faster in the
 Performance (\(\beta\) = -7.78 sec, {[}-14.01, -1.52{]}) and
 Presentation (-10.77 seconds, {[}-18.67, -2.73{]}) conditions, which
-were similar to one another (Fig \ref{fig:e2_results}B). There was no
+were similar to one another (Fig. \ref{fig:e2_results}B). There was no
 evidence of a main effect of social context or an interaction between
 goal condition and social context. Note that here we did not see a
 difference in decision times between the Learning and No-Goal
-conditions, which is different from the pattern in E1.
+conditions, which is different from the pattern in Exp.1.
 
 \subsubsection{Belief change:}\label{belief-change-1}
 
@@ -477,7 +488,7 @@ action choices. We put uninformative priors on these weights
 social-goal condition, using Bayesian data analytic techniques (Lee \&
 Wagenmakers, 2014).
 
-The inferred goal weights were consistent with what we predicted (Fig
+The inferred goal weights were consistent with what we predicted (Fig.
 \ref{fig:e2_results}D). \(\phi_{learn}\) was at its highest for
 No-social learning condition. On the other hand, the \(\phi_{perf}\) and
 \(\phi_{pres}\) together make up the highest portion in the presentation
@@ -492,7 +503,7 @@ iterations, discarding the first 50,000 for burnin. The Maximum A-
 Posteriori (MAP) estimate and 95\% Highest Probability Density Interval
 (HDI) for \(\lambda\) was 4.79 {[}3.96, 6.2{]}.
 
-The fitted model predictions of action choices are shown in Fig
+The fitted model predictions of action choices are shown in Fig.
 \ref{fig:e2_results}A (bottom). The model's expected posteriors over
 action choices capture key differences between conditions: the single
 action was more likely for no-social than social conditions overall, but
@@ -503,22 +514,21 @@ predict the distribution of action responses with high accuracy
 \section{General Discussion}\label{general-discussion}
 
 How do social contexts shape active learning? We proposed that people
-integrate learning-, performance-, and presentation-oriented goals when
-deciding what to do. In two experiments, we showed that people chose
-more informative actions, when learning goals were highlighted and in
-the absence of a relevant social context (no boss present), while they
-chose more immediately rewarding actions when performance or
-presentational goals were highlighted, especially when a boss was
-present. When no explicit goal was specified, people showed behavior
-that seemed to reflect a mixture of goals. Our model of social-active
-learning successfully captured key patterns in the participants' action
-decisions.
+integrate informational vs.~social goals when deciding what to do. In
+two experiments, we showed that people chose more informative actions,
+when learning goals were highlighted and in the absence of a relevant
+social context (no boss present), while they chose more immediately
+rewarding actions when performance or presentational goals were
+highlighted, especially when a boss was present. When no explicit goal
+was specified, people showed behavior that seemed to reflect a mixture
+of goals. Our model of social-active learning successfully captured key
+patterns in the participants' action decisions.
 
 This work brought active learning accounts into contact with social
 learning theories. We used ideas from Optimal Experiment Design, which
 models active learning as a process of rational choice that maximizes
 information gain, and Bayesian modeling framework, which formalizes a
-process of recursive social reasoning. Thereby we could include social
+process of recursive social reasoning. Thus, we included social
 information within a formal utility-theoretic framework, building a
 richer utility function that represented a weighted combination of
 multiple goals -- informational and social.
@@ -526,18 +536,22 @@ multiple goals -- informational and social.
 There are limitations to this work that present opportunities for future
 work. First, we did not differentiate between performance and
 presentation goals, since the choice of doing both actions satisfies
-both of these goals. Future work enriching the space of possible actions
-can tease apart actions driven by self-presentation. Second, we used a
-very particular social context (the presence of a boss) to influence
-people's action choices. It remains an open question as to how our
-results would generalize to other kinds of observers with different
-goals (e.g., a teacher who wants the learner to select actions that help
-her learn). Third, we limited people to a single action choice. While
-this allowed a clean measurement of our condition manipulations,
-real-world learning often involves sequential decision-making that could
-cause learners to prioritize different goals depending on their prior
-actions or the probability of interacting with an observer in the
-future.
+both of these goals in our current paradigm. Future work enriching the
+space of possible actions can tease apart actions driven by
+self-presentation. Second, we used a very particular social context (the
+presence of a boss) to influence people's action choices. It remains an
+open question as to how our results would generalize to other kinds of
+observers with different goals (e.g., a teacher who wants the learner to
+select actions that help her learn). Second, we used a rather particular
+social context (presence of a boss) to maximize the emphasis on
+presentational goals. Our model can be extended to explain a richer set
+of social considerations, such as observers with different goals (e.g.,
+a teacher who wants the learner to select actions that help her learn).
+Third, we limited people to a single action choice. While this allowed a
+clean measurement of our condition manipulations, real-world learning
+often involves sequential decision-making that could cause learners to
+prioritize different goals depending on their prior actions or the
+probability of interacting with an observer in the future.
 
 Another interesting open question is how our model could be used to
 understand active learning over development. Our framework could allow
@@ -560,7 +574,8 @@ social reasoning.
 \section{Acknowledgements}\label{acknowledgements}
 
 This work was supported by an NSERC postgraduate doctoral scholarship to
-EJY and an NSF GRFP to KM.
+EJY, an NSF GRFP to KM, a Jacobs Foundation Fellowship to MCF, and NSF
+\#1456077.
 
 \section{References}\label{references}
 
@@ -569,15 +584,15 @@ EJY and an NSF GRFP to KM.
 \noindent
 
 \hypertarget{refs}{}
-\hypertarget{ref-carpenter1998fourteen}{}
-Carpenter, M., Akhtar, N., \& Tomasello, M. (1998). Fourteen-through
-18-month-old infants differentially imitate intentional and accidental
-actions. \emph{Infant Behavior and Development}, \emph{21}(2), 315--330.
-
 \hypertarget{ref-castro2009human}{}
 Castro, R. M., Kalish, C., Nowak, R., Qian, R., Rogers, T., \& Zhu, X.
 (2009). Human active learning. In \emph{Advances in neural information
 processing systems} (pp. 241--248).
+
+\hypertarget{ref-frank2013throwing}{}
+Frank, M. C. (2013). Throwing out the bayesian baby with the optimal
+bathwater: Response to endress (2013). \emph{Cognition}, \emph{128}(3),
+417--423.
 
 \hypertarget{ref-goodman2016}{}
 Goodman, N. D., \& Frank, M. C. (2016). Pragmatic language
